# implicit-symbolic-regression

./: .gitignore  Untitled.ipynb  flake.nix  pyproject.toml
.cache/: Test Experiment_data.csv
.virtual_documents/examples/gplearn/: gplearn_basic-Copy1.ipynb  gplearn_basic.ipynb
examples/gplearn/: gplearn_basic.ipynb  gplearn_basic_og.ipynb
examples/gplearn/.ipynb_checkpoints/: circle_data-checkpoint.csv  gplearn_basic-checkpoint.ipynb
experiments/: gplearn_experiment.py  gplearn_header.yaml  zhong_noiseless.yaml  zhong_noiseless_test.yaml
experiments/scripts/: gen_data.py  generate_parameter_search.py
src/: modeling.py  samplers.py
src/experiment/: base_experiment.py
src/primel/: distributions.py  early_stopping.py  fitness.py  patch_kde.py  samplers.py  tree.py
src/primel/adapters/gplearn/: __init__.py  gplearn.py  model.py
src/results/example_19691231-190004/: 0_model.pkl  0_results.json
tests/: test_samplers.py  test_tree.py
tests/adapters/: test_gplearn.py
